# swagger.yaml
@@ -20,7 +20,7 @@ paths:
           application/json:
             schema:
               allOf:
-              - $ref: '#/components/schemas/registeruserrequest'
+              - $ref: '#/components/schemas/User'
               - example:
                   name: john
                   email: john@gmail.com
@@ -49,7 +49,7 @@ paths:
           application/json:
             schema:
               allOf:
-              - $ref: '#/components/schemas/loginuserrequest'
+              - $ref: '#/components/schemas/User'
               - example:
                   name: john
                   email: john@gmail.com
@@ -64,6 +64,26 @@ paths:
           description: ''
           headers: {}
       deprecated: false
+  /auth/user/{email}:
+    parameters:
+      - in: path
+        name: email
+        schema:
+          type: string
+        required: true
+        description: The user email
+    delete:
+      tags:
+      - Auth
+      summary: Delete User
+      operationId: DeleteUser
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+    
   /jobs:
     post:
       tags:
@@ -77,7 +97,7 @@ paths:
           application/json:
             schema:
               allOf:
-              - $ref: '#/components/schemas/CreateJobRequest'
+              - $ref: '#/components/schemas/Job'
               - example:
                   company: Accops
                   position: sde1
@@ -141,7 +161,7 @@ paths:
           application/json:
             schema:
               allOf:
-              - $ref: '#/components/schemas/UpdateJobRequest'
+              - $ref: '#/components/schemas/Job'
               - example:
                   company: Genesis
                   position: full stack developer
@@ -173,8 +193,8 @@ paths:
       - bearer: []
 components:
   schemas:
-    loginuserrequest:
-      title: loginuserrequest
+    User:
+      title: User
       required:
       - name
       - email
@@ -191,26 +211,8 @@ components:
         name: john
         email: john@gmail.com
         password: secret
-    registeruserrequest:
-      title: registeruserrequest
-      required:
-      - name
-      - email
-      - password
-      type: object
-      properties:
-        name:
-          type: string
-        email:
-          type: string
-        password:
-          type: string
-      example:
-        name: john
-        email: john@gmail.com
-        password: secret
-    CreateJobRequest:
-      title: CreateJobRequest
+    Job:
+      title: Job
       required:
       - company
       - position
@@ -227,24 +229,6 @@ components:
         company: Accops
         position: sde1
         status: pending
-    UpdateJobRequest:
-      title: UpdateJobRequest
-      required:
-      - company
-      - position
-      - status
-      type: object
-      properties:
-        company:
-          type: string
-        position:
-          type: string
-        status:
-          type: string
-      example:
-        company: Genesis
-        position: full stack developer
-        status: declined
   securitySchemes:
     bearer:
       type: http
